---------------------
MNet Suite
Michael Laforest
mjlaforest@gmail.com

CHANGE LOG
--------------------

v0.8 -
	- Internal code changes.
	- Trunks show native VLAN (if mismatched then both P and C will be displayed)
	- Trunks show allowed VLANs (if mismatched then both P and C will be displayed) (standard range only)
	- Added support for LLDP

v0.7 - 7/25/2015
	graph
	- Added config option "include_svi" to include SVI info for nodes
	- Added config option "include_lo" to include loopback info for nodes
	- Added config option "include_serials" to include serial numbers in diagram for nodes
	- Added config option "get_stack_members" to include additional stack member info (serials, mac's etc).
		This info is also included in the catalog option, with each stack member being a line item.
	- Added config option "get_vss_members" to include additional VSSS member info.
	- Added config option "collapse_stackwise" and "collapse_vss". When =0 clusters will be expanded.
	- Removed SNMP platform detection and now use CDP. This means a low depth may not get the root platform.

v0.6 - 7/19/2015
	graph
	- Changed from PyDot to PyDot2
	- Fixed bug with CDP neighbors that do not advertise an IP (reported by Kent Coble)
	- Added config file option to change font size for node text
	- Added config file option to change font size for link text
	- Changed internal crawl method
	- Improved platform identification
	- Added IOS version identification

	config
	- Added command line module option to output a default config file

v0.4 - 7/10/2015
	- Improved speed.
	- Cleaned up code base.
	- Made PyNetAddr optional (change USE_NETADDR=1 to USE_NETADDR=0 to disable)

v0.3 - 7/8/2015
	- Added -C option to write a catalog of the discovery to a csv file.
	- Runs for ~1/4 the time.

v0.2 - 7/7/2015

	- Config: Changed "ignore" to "exclude". Now a list of CIDR's instead of specific IP addresses (requested by /u/LiftedKilt)