@@ -23,7 +23,8 @@
 		"include_serials": 0,
 		"get_stack_members" : 0,
 		"get_vss_members" : 0,
-		"collapse_stackwise" : 1,
-		"collapse_vss" : 1
+		"expand_stackwise" : 0,
+		"expand_vss" : 0,
+		"expand_lag" : 1
 	}
 }
